--- a/apache2.conf
+++ b/apache2.conf
@@ -17,8 +17,8 @@ IncludeOptional /etc/apache2/mods-enabled/*.load
 IncludeOptional /etc/apache2/mods-enabled/*.conf
 IncludeOptional /etc/apache2/conf-enabled/*.conf
 IncludeOptional /etc/apache2/sites-enabled/*.conf
-ErrorLog /var/log/apache2/error.log
-#ErrorLog /dev/stderr
+#ErrorLog /var/log/apache2/error.log
+ErrorLog /dev/stderr
 LogLevel debug
 #LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 #LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
@@ -26,9 +26,21 @@ LogLevel debug
 #LogFormat "%{Referer}i -> %U" referer
 #LogFormat "%{User-agent}i" agent
 TransferLog /dev/stdout
+ProxyRequests Off
+NameVirtualHost *:80
 <VirtualHost *:80>
-  ServerName backend1.bapa.acbuilt1.built.bp-lab-ac.com
+  ServerName apache.bapa.acbuilt1.bp-lab-ac.com
+  DocumentRoot /var/www/html
+</VirtualHost>
+<VirtualHost *:80>
+  ServerName backend1.bapa.acbuilt1.bp-lab-ac.com
   ProxyPreserveHost On
-  ProxyPass / http://backend1:80/
-  ProxyPassReverse / http://backend1:80/
+  ProxyPass "/" "http://backend1:80/"
+  ProxyPassReverse "/" "http://backend1:80/"
+</VirtualHost>
+<VirtualHost *:80>
+  ServerName backend2.bapa.acbuilt1.bp-lab-ac.com
+  ProxyPreserveHost On
+  ProxyPass "/" "http://backend2:80/"
+  ProxyPassReverse "/" "http://backend2:80/"
 </VirtualHost>
