modified for ac4 environment

--- a/apache2.conf
+++ b/apache2.conf
@@ -19,7 +19,7 @@ IncludeOptional /etc/apache2/conf-enabled/*.conf
 IncludeOptional /etc/apache2/sites-enabled/*.conf
 #ErrorLog /var/log/apache2/error.log
 ErrorLog /dev/stderr
-LogLevel debug
+#LogLevel debug
 #LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 #LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 #LogFormat "%h %l %u %t \"%r\" %>s %O" common
@@ -29,17 +29,17 @@ TransferLog /dev/stdout
 ProxyRequests Off
 NameVirtualHost *:80
 <VirtualHost *:80>
-  ServerName apache.bapa.acbuilt1.bp-lab-ac.com
+  ServerName apache.apache-proxy.ac4.built-bp-dev.com
   DocumentRoot /var/www/html
 </VirtualHost>
 <VirtualHost *:80>
-  ServerName backend1.bapa.acbuilt1.bp-lab-ac.com
+  ServerName backend1.apache-proxy.ac4.built-bp-dev.com
   ProxyPreserveHost On
   ProxyPass "/" "http://backend1:80/"
   ProxyPassReverse "/" "http://backend1:80/"
 </VirtualHost>
 <VirtualHost *:80>
-  ServerName backend2.bapa.acbuilt1.bp-lab-ac.com
+  ServerName backend2.apache-proxy.ac4.built-bp-dev.com
   ProxyPreserveHost On
   ProxyPass "/" "http://backend2:80/"
   ProxyPassReverse "/" "http://backend2:80/"
