--- a/apache2.conf
+++ b/apache2.conf
@@ -29,17 +29,17 @@ TransferLog /dev/stdout
 ProxyRequests Off
 NameVirtualHost *:80
 <VirtualHost *:80>
-  ServerName apache.apache-proxy.ac4.built-bp-dev.com
+  ServerName apache.apache-proxy.ac4.bp-lab-ac.com
   DocumentRoot /var/www/html
 </VirtualHost>
 <VirtualHost *:80>
-  ServerName backend1.apache-proxy.ac4.built-bp-dev.com
+  ServerName backend1.apache-proxy.ac4.bp-lab-ac.com
   ProxyPreserveHost On
   ProxyPass "/" "http://backend1:80/"
   ProxyPassReverse "/" "http://backend1:80/"
 </VirtualHost>
 <VirtualHost *:80>
-  ServerName backend2.apache-proxy.ac4.built-bp-dev.com
+  ServerName backend2.apache-proxy.ac4.bp-lab-ac.com
   ProxyPreserveHost On
   ProxyPass "/" "http://backend2:80/"
   ProxyPassReverse "/" "http://backend2:80/"
